--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,16 @@
 
 buildscript {
     ext.kotlin_version = '1.3.50'
-    ext.navigationVersion = '1.0.0-rc02'
     repositories {
         google()
         jcenter()
         
     }
     dependencies {
+
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
